# history-bitch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Trunk.toml  index.html  manifest.json  package.json  webpack.config.js
css/: base.css
js/app/: readyState.js
js/views/: index.js  index2.js  parse.js  popup.js  trades.js
public/: index.html  index.js
rust/: Cargo.toml
rust/src/: _lib.rs  app.rs  color.rs  description.rs  header.rs  item.rs  lib.rs  main.rs  parser.rs  parsing.rs  requests.rs  trade_list_item.rs  trades_list.rs
rust/src/data/: response.json
rust/src/ref/: list.rs  list_item.rs
svelte/: package.json  rollup.config.js
svelte/src/: App.svelte  Photo.svelte  main.js
views/: index.html  index2.html  popup.html
